// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ESU School correctly 1`] = `
.c1 {
  font-size: 3rem;
  line-height: 3rem;
  text-transform: uppercase;
  font-weight: 400;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c5 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c8 {
  font-size: 1.25rem;
  line-height: 1.25rem;
  text-transform: inherit;
  font-weight: 400;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
}

.c6 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c7 {
  width: 100%;
  font-size: 1.25rem;
  display: block;
  box-sizing: border-box;
  padding: 0.8rem 1.5rem;
  padding-right: 4rem;
  margin: 0;
  position: relative;
  height: 48px;
  font-weight: 400;
  background: #F4F3F5 url(mock.asset) calc(100% - 1.5rem) 14px/20px 1.5rem no-repeat;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  cursor: pointer;
}

.c7:focus {
  border: 1px solid #666;
}

.c12 {
  text-align: left;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  color: #FFFFFF;
  background-color: #2C0230;
}

.c9 {
  margin-top: 1rem;
}

.c9 input {
  text-align: center;
  border-color: #2C0230;
  width: 100%;
  font-size: 1rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1rem;
}

.c11 p {
  font-size: 1rem;
  line-height: 2rem;
}

.c11 p a {
  font-size: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem 0;
}

.c2 {
  margin-bottom: 1.5rem;
}

.c10 {
  width: 100%;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  padding: 1rem 0.5rem;
  background: #4ECDBE;
  border: none;
  border-radius: 100px;
}

.c10:active,
.c10:focus,
.c10:hover {
  background-color: #961D35;
}

@media (min-width:740px) {

}

@media (min-width:740px) {
  .c7 {
    max-width: 290px;
  }
}

@media (min-width:740px) {
  .c9 input {
    font-size: 1.25rem;
    max-width: 180px;
  }
}

@media (min-width:1024px) {
  .c10 {
    width: auto;
    padding: 1rem 2rem;
    margin: 0 auto 2rem;
  }
}

<div
  className="c0"
>
  <h2
    className="c1 c2"
    color="inherit"
    size="xxl"
  >
    sign up letter
  </h2>
  <form
    className="c3"
    onSubmit={[Function]}
  >
    <label
      className="c4"
    >
      <span
        className="c5 c6"
        color="inherit"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Please choose an option",
          }
        }
        size="s"
      />
      <select
        className="c7"
        defaultValue=""
        onChange={[Function]}
        placeholder="Please choose an option"
        value=""
      >
        <option
          disabled={true}
          value=""
        >
          Please choose an option
        </option>
        <option
          value=""
        >
          -- Select age group --
        </option>
        <option
          value="Option one"
        >
          The first option
        </option>
        <option
          value="Option two"
        >
          The second option
        </option>
        <option
          value="Option three"
        >
          The third option
        </option>
        <option
          value="Option four"
        >
          The fourth option
        </option>
      </select>
      
    </label>
    <p
      className="c8"
      color="inherit"
      size="m"
    >
      Now please select your teaching group so you get the right updates.
    </p>
    <div
      className="c9"
    >
      <input
        className="c10"
        color="teal"
        data-test="subscribe-button-school"
        onClick={[Function]}
        type="submit"
        value=" Subscribe"
      />
    </div>
  </form>
  <div
    className="c11"
  >
    <div
      className="c12"
      dangerouslySetInnerHTML={
        Object {
          "__html": "check <a href=\\"https://www.comicrelief.com/privacy-notice\\">Privacy policy</a>",
        }
      }
    />
  </div>
</div>
`;

exports[`renders correctly 1`] = `
.c1 {
  font-size: 3rem;
  line-height: 3rem;
  text-transform: uppercase;
  font-weight: 400;
  font-family: 'Anton',Impact,sans-serif;
  -webkit-letter-spacing: 0.03rem;
  -moz-letter-spacing: 0.03rem;
  -ms-letter-spacing: 0.03rem;
  letter-spacing: 0.03rem;
}

.c8 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c11 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
}

.c11:focus {
  border: 1px solid #666;
}

.c11:focus::-webkit-input-placeholder {
  color: #666;
}

.c11:focus::-moz-placeholder {
  color: #666;
}

.c11:focus:-ms-input-placeholder {
  color: #666;
}

.c11:focus::placeholder {
  color: #666;
}

.c10 {
  position: relative;
  font-size: 1.25rem;
}

.c4 {
  text-align: left;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  color: #FFFFFF;
  background-color: #2C0230;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
}

.c12 {
  margin-top: 1rem;
}

.c12 input {
  text-align: center;
  border-color: #2C0230;
  width: 100%;
  font-size: 1rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1rem;
}

.c14 p {
  font-size: 1rem;
  line-height: 2rem;
}

.c14 p a {
  font-size: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 1rem 0;
}

.c7 {
  width: 100%;
}

.c2 {
  margin-bottom: 1.5rem;
}

.c13 {
  width: 100%;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  padding: 1rem 0.5rem;
  background: #4ECDBE;
  border: none;
  border-radius: 100px;
}

.c13:active,
.c13:focus,
.c13:hover {
  background-color: #961D35;
}

@media (min-width:740px) {
  .c11 {
    max-width: 290px;
  }
}

@media (min-width:740px) {
  .c12 input {
    font-size: 1.25rem;
    max-width: 180px;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: auto;
    padding: 1rem 2rem;
    margin: 0 auto 2rem;
  }
}

<div
  className="c0"
>
  <h2
    className="c1 c2"
    color="inherit"
    size="xxl"
  >
    sign up letter
  </h2>
  <div
    className="c3"
  >
    <div
      className="c4"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1> Top Copy</h1> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>",
        }
      }
    />
  </div>
  <form
    className="c5"
    onSubmit={[Function]}
  >
    <label
      className="c6 c7"
      htmlFor="email"
    >
      <span
        className="c8 c9"
        color="inherit"
        dangerouslySetInnerHTML={
          Object {
            "__html": "email",
          }
        }
        size="s"
      />
      <div
        className="c10"
      >
        
        <input
          aria-label="Email address"
          className="c11"
          id="email"
          name="email"
          onChange={[Function]}
          placeholder="example@youremail.com"
          type="email"
          value=""
        />
        
      </div>
    </label>
    <div
      className="c12"
    >
      <input
        className="c13"
        color="teal"
        data-test="subscribe-button"
        onClick={[Function]}
        type="submit"
        value=" Subscribe"
      />
    </div>
  </form>
  <div
    className="c14"
  >
    <div
      className="c4"
      dangerouslySetInnerHTML={
        Object {
          "__html": "check <a href=\\"https://www.comicrelief.com/privacy-notice\\">Privacy policy</a>",
        }
      }
    />
  </div>
</div>
`;
